2008-03-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/save.c (save_set_all): Fixed saving negative palette.

2008-03-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_format): Remove superfluous c_token++.
	Bug #1922288

2008-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.h src/plot3d.c docs/gnuplot.doc: Add a per-plot splot
	keyword "nocontours".  This overrides the global "set contour", so
	that you can contour a single surface from a plot with many.

2008-03-13  Carl Troein  <troein@users.sourceforge.net>

	* term/post.trm (PS_filled_polygon): Limit the number of consecutive
	relative moves in order to avoid accumulated round-off error.

2007-03-11  Ethan Merritt  <merritt@u.washington.edu>
	
	* src/gadgets.c src/gadgets.h src/graph3d.c src/graphics.c src/save.c
	src/set.c src/show.c src/unset.c src/util3d.c:  Add option to specify
	plot margins as an absolute position on the canvas (screen).
	    set {lrbt}margin screen <frac>
	Back-port of CVS patches from 2006-10-21 2006-11-04 2008-03-06

	* src/plot2d.c (get_data store2d_point) src/graphics.c (plot_boxes):
	Alter processing of "with boxes" to handle specification of a column
	containing variable color information.  Back-port from CVS.

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	Version 4.2.3 release
	Any further commits to this tree will be in 4.2.4 if such a version is
	ever released.

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_filled_polygon):
	Fix read beyond end of buffer found by valgrind.

	* src/datafile.c (df_tokenise):
	Fix uninitialized variable found by valgrind.

2007-03-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional): Check for user-defined
	line styles when choosing colors for front/back of hidden surfaces.
	Bugfix (back-ported from 4.3)

	* src/color.c (draw_color_smooth) src/graph3d.c (do_3dplot cntr3d_lines)