@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: eval.c,v 1.51.2.1 2007/03/22 04:50:35 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: eval.c,v 1.51.2.2 2008/04/01 18:42:00 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - eval.c */
@@ -802,6 +802,16 @@ update_gpval_variables(int context)
 	v = add_udv_by_name("GPVAL_COMPILE_OPTIONS");
 	if (v && v->udv_undef == TRUE)
 	    fill_gpval_string("GPVAL_COMPILE_OPTIONS", compile_options);
+
+	/* Permanent copy of user-clobberable variables pi and NaN */
+	v = add_udv_by_name("GPVAL_PI");
+	v->udv_undef = FALSE; 
+	Gcomplex(&v->udv_value, M_PI, 0);
+#ifdef HAVE_ISNAN
+	v = add_udv_by_name("GPVAL_NaN");
+	v->udv_undef = FALSE; 
+	Gcomplex(&v->udv_value, atof("NaN"), 0);
+#endif
     }
 
 }
